--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dist/
 .env
 .env.local
 .env.*.local
+serviceAccountKey.json
 
 # sistema operativo / editor
 .DS_Store
@@ -25,3 +26,6 @@ pnpm-debug.log*
 package-lock.json
 pnpm-lock.yaml
 yarn.lock
+
+# scripts
+scripts/
